# glinka

./: .coverage  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGES.md  Caddyfile  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.stage.yml  docker-compose.yml  main_api.py  pyproject.toml  start-tunnel.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_attachments_table.py  bbe85adaaa86_init_tables.py  c3d4e5f6g7h8_add_reminder_notify_trigger.py  d4e5f6g7h8i9_add_task_created_at.py  e5f6g7h8i9j0_add_composite_and_fk_indexes.py  f6g7h8i9j0k1_reminder_status_enum.py
app/application/: task_services.py
app/core/: config.py  logging_config.py  security.py  utils.py
app/domain/: entities.py  exceptions.py  interfaces.py
app/infrastructure/: database.py  file_storage.py  models.py  repositories.py
app/presentation/: api.py  dependencies.py
app/worker/: main.py  metrics.py  scheduler.py
docker/: init-grafana-user.sh  init-grafana-user.sql
frontend/: .coverage  .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  mock.ts
frontend/src/components/: BottomSheet.tsx  ErrorBoundary.tsx  TaskCard.tsx  TaskDetail.tsx
frontend/src/hooks/: useTelegram.ts
monitoring/: loki.yml  prometheus.yml  promtail.yml
tests/: conftest.py  test_api.py  test_entities.py  test_file_storage.py  test_reminder_schedule.py  test_scheduler.py  test_security.py  test_task_service.py
(+9 files in other folders)
