[project]
name = "glinka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.25.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.134.0",
    "granian>=2.7.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.47",
]
