[project]
name = "glinka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.25.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.134.0",
    "granian>=2.7.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.47",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "aiosqlite>=0.21",
    "ty>=0.0.1a7",
]
